horizontal scroll fix

--- a/baldwin-gf/style.css
+++ b/baldwin-gf/style.css
@@ -436,7 +436,7 @@ BEGIN COLOR SECTION
 
 .nina-james-bg {
   background: url("./ninajames.jpg");
-  background-position: right;
+  background-position: center;
   background-repeat: no-repeat;
   background-color: #AF1201; }
 
